--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
     <script>
         // 1. 告訴電腦照片的檔名 (如果你的檔名不一樣，請改這裡)
-        const dancePhotoName = 'jay happy.jpg';
+        const dancePhotoName = 'jay dance.jpg';
         const hospitalPhotoName = 'jay hospital.jpg';
 
 
