--- a/index.html
+++ b/index.html
@@ -87,9 +87,11 @@
         // 1. 告訴電腦照片的檔名 (如果你的檔名不一樣，請改這裡)
         const dancePhotoName = 'jay dance.jpg';
         const hospitalPhotoName = 'jay hospital.jpg';
+        const happyPhotoName = 'jay happy.jpg';
 
 
         // 2. 抓取網頁上的元素
+        const happyBtn = document.getElementById('happy-btn');
         const goodBtn = document.getElementById('good-btn');
         const badBtn = document.getElementById('bad-btn');
         const resultImg = document.getElementById('result-image');
@@ -102,9 +104,16 @@
             // B. 把原本隱藏的圖片顯示出來 (改成 block 或 inline-block)
             resultImg.style.display = 'inline-block';
             // C. (選用) 改一下圖片的描述文字
-            resultImg.alt = "開心的跳舞照片";
+            resultImg.alt = "跳舞照片";
         });
-
+        happyBtn.addEventListener('click', function() {
+            // A. 把圖片的來源 (src) 改成跳舞照片
+            resultImg.src = happyPhotoName;
+            // B. 把原本隱藏的圖片顯示出來 (改成 block 或 inline-block)
+            resultImg.style.display = 'inline-block';
+            // C. (選用) 改一下圖片的描述文字
+            resultImg.alt = "開心的照片";
+        });
 
         // 4. 設定「不好」按鈕被點擊時發生的事
         badBtn.addEventListener('click', function() {
