--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
     <h1>你今天的心情怎麼樣？</h1>
 
     <div>
+        <button id="happy-btn" class="btn">開心</button>
         <button id="good-btn" class="btn">好</button>
         <button id="bad-btn" class="btn">不好</button>
     </div>
