--- a/dj.html
+++ b/dj.html
@@ -2,7 +2,7 @@
 <html lang="zh-TW">
 <head>
     <meta charset="UTF-8">
-    <title>線上 DJ 打擊墊</title>
+    <title>爆氣發聲器</title>
     <style>
         body {
             background-color: #1a1a1a; /* 深色背景比較帥 */
