--- a/dj.html
+++ b/dj.html
@@ -26,7 +26,7 @@
             height: 20%;
             background-image: url('爆氣.jpg'); /* 背景圖 */
             background-size: cover;
-            background-position: center;
+            background-position: center top;
             opacity: 0.3;
             z-index: -1;
         }
