--- a/dj.html
+++ b/dj.html
@@ -312,8 +312,9 @@
             };
         }
 
-        // 每 0.5 秒掉一個
-        setInterval(spawnNote, 500);
+        // 每 0.2 秒掉一個
+        setInterval(spawnNote, 0.2
+        );
 
     </script>
 
