--- a/dj.html
+++ b/dj.html
@@ -2,7 +2,7 @@
 <html lang="zh-TW">
 <head>
     <meta charset="UTF-8">
-    <title>Web Mania (穩定修復版)</title>
+    <title>痛飆 Mania (爆氣)</title>
     <style>
         /* === 1. 介面設定 === */
         body {
